...
                        LclTab(
                            tab == Tab.Workspace && screen == Screen.Home,
                            {
                                tab = Tab.Workspace
                                screen = Screen.Home
                            },
                            Modifier.weight(1f).fillMaxHeight().testTag("tab_home"),
                            barOnTop = true,
                        ) {
                            NavigationLabel("⌂", "Home")
                        }
                        LclTab(
                            tab == Tab.Workspace && screen == Screen.Workspace,
                            {
                                if (tab != Tab.Manual) screen = Screen.Workspace
                                tab = Tab.Workspace
                            },
                            Modifier.weight(1f).fillMaxHeight().testTag("tab_workspace"),
                            barOnTop = true,
                        ) {
                            NavigationLabel("▤", "Workspace")
                        }
                        LclTab(
                            tab == Tab.Manual,
                            { tab = Tab.Manual },
                            Modifier.weight(1f).fillMaxHeight().testTag("tab_manual"),
                            barOnTop = true,
                        ) {
                            NavigationLabel("?", "Manual")
                        }
                        LclTab(
                            tab == Tab.Workspace && screen == Screen.Settings,
                            {
                                tab = Tab.Workspace
                                screen = Screen.Settings
                            },
                            Modifier.weight(1f).fillMaxHeight().testTag("tab_settings"),
                            barOnTop = true,
                        ) {
                            NavigationLabel("⚙", "Settings")
                        }
                    }
                }
...
